--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ribosomalrtf": "0.0.1"
   },
   "devDependencies": {
+    "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   }
